feedback.txt
Your test suite did not compile!

tests/tests.cc:107:7: error: redefinition of 'atm'
  107 |   Atm atm;
      |       ^
tests/tests.cc:91:7: note: previous definition is here
   91 |   Atm atm;
      |       ^
tests/tests.cc:205:9: warning: unused variable 'transactions' [-Wunused-variable]
  205 |   auto& transactions = atm.GetTransactions();
      |         ^~~~~~~~~~~~
1 warning and 1 error generated.


score: 0/5
